--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:textAlignment="center"
-        android:textSize="26sp"
+        android:textSize="26dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,6 +24,7 @@
         android:layout_marginTop="100dp"
         android:hint="Min"
         android:inputType="number"
+        android:maxLength="10"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,6 +36,7 @@
         android:layout_height="wrap_content"
         android:hint="Max"
         android:inputType="number"
+        android:maxLength="10"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
