--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -24,7 +24,7 @@
         android:layout_marginTop="50dp"
         android:text="Result:"
         android:textAlignment="center"
-        android:textSize="66sp"
+        android:textSize="66dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/result_label"
