--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="26dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,9 +23,9 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
+        android:maxLength="19"
         android:hint="Min"
         android:inputType="number"
-        android:maxLength="10"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,10 +35,10 @@
         android:id="@+id/max_value"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:maxLength="19"
         android:hint="Max"
         android:inputType="number"
-        android:maxLength="10"
-        android:textSize="20sp"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/min_value" />
@@ -47,7 +48,9 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:text="Generate"
+        android:padding="24dp"
+        android:text="@string/generate"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/max_value" />
