--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:text="Result:"
+        android:textColor="@color/black"
         android:textAlignment="center"
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,6 +26,7 @@
         android:text="Result:"
         android:textAlignment="center"
         android:textSize="66dp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/result_label"
@@ -32,10 +34,12 @@
 
     <Button
         android:id="@+id/back"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:text="Back"
+        android:layout_marginTop="125dp"
+        android:text="@string/back"
+        android:paddingVertical="24dp"
+        android:paddingHorizontal="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/result" />
